# riscv_performance_checker

./: .env  .env.sample  Cargo.toml  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  entrypoint.sh  test.txt  testdb.sqlite3
content_pdfs/fatorial_done/: fatorial_with_forwarding.txt  fatorial_with_nops.txt  fatorial_with_reorder_and_nops.txt
migrations/2023-08-20-032217_create_organization/: up.sql
migrations/2023-08-20-222959_create_bin_files/: down.sql  up.sql
pipeline_files/: forwading_and_reorder_with_nops.txt  forwarding_with_nops.txt  only_nops.txt  reorder_with_only_nops.txt
riscv_bin_dump/: fatorial.txt  laco5x.txt  raw_hazard.txt  test1_1.txt  war_hazard.txt  waw_hazard.txt
src/: main.rs  schema.rs
src/api/: bin_files_controller.rs  mod.rs  organizations_controller.rs  performance_calculator_controller.rs
src/config/: app.rs  db.rs
src/models/: bin_file.rs  mod.rs  organization.rs
src/performance_calculator/: data_hazard.rs  mod.rs  monocycle_calculator.rs  performance_calculator.rs  pipeline_calculator.rs
src/riscv_core/: instruction.rs
src/services/: bin_files_service.rs  mod.rs  organizations_service.rs  performance_calculator_service.rs
src/utils/: constants.rs  error.rs
